--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,3 +17,4 @@
 @import "vk-group-section.scss"; //стили для вк-виджета в index.html
 @import "white-block.scss"; //стили для белого блока (контентный блок-рамка для текста, фоток и прочего)
 @import "photo-three-line"; //стили для горизонтального блока-ряда из трех фоток
+@import "photo-popup.scss"; //стили для попапа для фоток
