--- a/sass/custom-text-one-line-blocks.scss
+++ b/sass/custom-text-one-line-blocks.scss
@@ -1,5 +1,5 @@
 .white-text-no-background {
-  margin-top: 25px;
+  margin: 35px 0px 30px 0px;
   letter-spacing: -0.25px;
   color: white;
   text-align: center;
@@ -27,6 +27,11 @@
   .mission-studio__text {
     @include title-small;
 }
+
+  .white-text-no-background--center {
+    padding: 0px 35px;
+}
+
 }
 
 @media (min-width: $tablet-widths) {
