--- a/sass/custom-text-one-line-blocks.scss
+++ b/sass/custom-text-one-line-blocks.scss
@@ -1,9 +1,20 @@
 .white-text-no-background {
+  width: 100%;
   margin: 35px 0px 30px 0px;
   letter-spacing: -0.25px;
   color: white;
   text-align: center;
   @include text-shadow;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.black-text {
+  width: 100%;
+  margin: 15px 0px 25px 0px;
+  letter-spacing: -0.25px;
+  color: black;
+  text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
